Updated Irish translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-24 Alastair McKinstry <mckinstry@debian.org>
+
+	* ga.po: Updated Irish translation.
+
 2004-02-24  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
