--- a/po/ga.po
+++ b/po/ga.po
@@ -3803,9 +3803,9 @@ msgstr "Glan an Bosca Bruscair"
 #, fuzzy, c-format
 msgid "Open %d Window?"
 msgid_plural "Open %d Windows?"
-msgstr[0] "Oscáil %d Fhuinneoga?"
-msgstr[1] "Oscáil %d Fhuinneoga?"
-msgstr[2] "Oscáil %d Fhuinneoga?"
+msgstr[0] "Oscail %d Fhuinneoga?"
+msgstr[1] "Oscail %d Fhuinneoga?"
+msgstr[2] "Oscail %d Fhuinneoga?"
 
 #: src/file-manager/fm-directory-view.c:541
 msgid "Are you sure you want to open all files?"
@@ -4118,9 +4118,9 @@ msgstr ""
 #, fuzzy, c-format
 msgid "Open in New Window"
 msgid_plural "Open in %d New Windows"
-msgstr[0] "Oscáil i Fhuinneog Nua"
-msgstr[1] "Oscáil i Fhuinneog Nua"
-msgstr[2] "Oscáil i Fhuinneog Nua"
+msgstr[0] "Oscail i Fhuinneog Nua"
+msgstr[1] "Oscail i Fhuinneog Nua"
+msgstr[2] "Oscail i Fhuinneog Nua"
 
 #: src/file-manager/fm-directory-view.c:5510
 msgid "Browse Folder"
@@ -4956,7 +4956,7 @@ msgstr "Ag lódá¡il..."
 
 #: src/file-manager/fm-tree-view.c:949
 msgid "Open"
-msgstr "Oscáil"
+msgstr "Oscail"
 
 #. add the "create folder" menu item
 #: src/file-manager/fm-tree-view.c:973
@@ -5115,7 +5115,7 @@ msgstr ""
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:28
 msgid "Open in Navigation Window"
-msgstr "Oscáil i Fhuinneog an Inseoltóireacht"
+msgstr "Oscail i Fhuinneog an Inseoltóireacht"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:29
 msgid "Open the selected item in this window"
@@ -5203,7 +5203,7 @@ msgstr ""
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:55
 msgid "_Open"
-msgstr "_Oscáil"
+msgstr "_Oscail"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:56
 msgid "_Open Scripts Folder"
@@ -5378,7 +5378,7 @@ msgstr ""
 #: src/file-manager/nautilus-search-list-view-ui.xml.h:2
 #, fuzzy
 msgid "Reveal in New Window"
-msgstr "Oscáil i an Fuinneog _Nua"
+msgstr "Oscail i an Fuinneog _Nua"
 
 #: src/file-manager/nautilus-search-list-view-ui.xml.h:3
 msgid "Show Indexing Status"
@@ -7026,65 +7026,65 @@ msgstr "Riarthóir ar an líontán"
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Féach ar na riarthóir líontán i Nautilus"
 
-#~ msgid "New Server"
-#~ msgstr "Riarthóir Nua"
+msgid "New Server"
+msgstr "Riarthóir Nua"
 
-#~ msgid "*"
-#~ msgstr "*"
+msgid "*"
+msgstr "*"
 
-#~ msgid "_Connect"
-#~ msgstr "_Cónaisc"
+msgid "_Connect"
+msgstr "_Cónaisc"
 
-#~ msgid "0 items"
-#~ msgstr "0 mí"
+msgid "0 items"
+msgstr "0 mí"
 
-#~ msgid "0 folders"
-#~ msgstr "0 comhadlann"
+msgid "0 folders"
+msgstr "0 comhadlann"
 
-#~ msgid "0 files"
-#~ msgstr "0 comhad"
+msgid "0 files"
+msgstr "0 comhad"
 
-#~ msgid "1 item"
-#~ msgstr "mír amhain"
+msgid "1 item"
+msgstr "mír amhain"
 
-#~ msgid "1 folder"
-#~ msgstr "comhadlann amhain"
+msgid "1 folder"
+msgstr "comhadlann amhain"
 
-#~ msgid "1 file"
-#~ msgstr "comhad amhain"
+msgid "1 file"
+msgstr "comhad amhain"
 
-#~ msgid "%u items"
-#~ msgstr "%u mí"
+msgid "%u items"
+msgstr "%u mí"
 
-#~ msgid "C_hoose"
-#~ msgstr "P_ioc"
+msgid "C_hoose"
+msgstr "P_ioc"
 
-#~ msgid "1 folder selected"
-#~ msgstr "comhadlann amhain roghnaite"
+msgid "1 folder selected"
+msgstr "comhadlann amhain roghnaite"
 
-#~ msgid "Other _Viewer..."
-#~ msgstr "Amha_rcóir Eile..."
+msgid "Other _Viewer..."
+msgstr "Amha_rcóir Eile..."
 
-#~ msgid "A _Viewer..."
-#~ msgstr "Amha_rcóir..."
+msgid "A _Viewer..."
+msgstr "Amha_rcóir..."
 
-#~ msgid "Open in %d New Windows"
-#~ msgstr "Oscáil %d i Fhuinneoga Nua"
+msgid "Open in %d New Windows"
+msgstr "Oscail %d i Fhuinneoga Nua"
 
-#~ msgid "File name"
-#~ msgstr "Ainm an Comhad"
+msgid "File name"
+msgstr "Ainm an Comhad"
 
-#~ msgid "Reveal in %d _New Windows"
-#~ msgstr "Foilsigh i %d Fuinneogaí _Nua"
+msgid "Reveal in %d _New Windows"
+msgstr "Foilsigh i %d Fuinneogaí _Nua"
 
-#~ msgid "Write to CD"
-#~ msgstr "Scríobh go CD"
+msgid "Write to CD"
+msgstr "Scríobh go CD"
 
-#~ msgid "Close this window"
-#~ msgstr "Dún an fhuinneog seo"
+msgid "Close this window"
+msgstr "Dún an fhuinneog seo"
 
-#~ msgid "Write contents to a CD"
-#~ msgstr "Scríobh na ábhar go dtí CD"
+msgid "Write contents to a CD"
+msgstr "Scríobh na ábhar go dtí CD"
 
-#~ msgid "_Write to CD"
-#~ msgstr "_Scríobh go CD"
+msgid "_Write to CD"
+msgstr "_Scríobh go CD"
