--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-24  Paisa Seeluangsawat  <paisa@users.sf.net>
+
+	* th.po: Updated Thai translation.
+
 2004-02-24 Alastair McKinstry <mckinstry@debian.org>
 
 	* ga.po: Updated Irish translation.
