--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-25  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2004-02-25  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
