--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-25  Pablo G. del Campo  <pablodc@bigfoot.com>
+
+	* es.po: Updated Spanish translation.
+
 2004-02-25  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
