Updated Serbian translation.

--- a/po/sr.po
+++ b/po/sr.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-24 14:56+0100\n"
-"PO-Revision-Date: 2004-02-23 15:19+0100\n"
+"POT-Creation-Date: 2004-02-25 17:47+0100\n"
+"PO-Revision-Date: 2004-02-25 17:51+0100\n"
 "Last-Translator: Данило Шеган <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -1710,26 +1710,23 @@ msgstr "Ширина површи постранце"
 
 #: libnautilus-private/nautilus-column-chooser.c:365
 msgid "Move _Up"
-msgstr ""
+msgstr "Премести _доле"
 
 #: libnautilus-private/nautilus-column-chooser.c:374
 msgid "Move _Down"
-msgstr ""
+msgstr "Премести _горе"
 
 #: libnautilus-private/nautilus-column-chooser.c:383
-#, fuzzy
 msgid "_Show"
-msgstr "Прикажи %s"
+msgstr "При_кажи"
 
 #: libnautilus-private/nautilus-column-chooser.c:393
-#, fuzzy
 msgid "_Hide"
-msgstr "_Пронађи"
+msgstr "Сакри_ј"
 
 #: libnautilus-private/nautilus-column-chooser.c:406
-#, fuzzy
 msgid "_Use Default"
-msgstr "Користи подразу_мевану позадину"
+msgstr "Подра_зумевано"
 
 #: libnautilus-private/nautilus-column-utilities.c:44
 msgid "The name and icon of the file."
@@ -4211,9 +4208,9 @@ msgid "An _Application..."
 msgstr "_Програм..."
 
 #: src/file-manager/fm-directory-view.c:3915
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot open %s"
-msgstr "Не може да умножи смеће"
+msgstr "Не могу да отворим %s"
 
 #: src/file-manager/fm-directory-view.c:3918
 #, c-format
@@ -4227,6 +4224,9 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
+"Име датотеке „%s“ означава да је ова датотека врсте „%s“. Садржај датотеке означава да је датотека врсте „%s“. Уколико отворите ову датотеку, ваш систем може бити изложен безбедносном ризику.\n"
+"\n"
+"Не отварајте ову датотеку осим ако је нисте сами направили, или је примили из поузданог извора. Да отворите датотеку, преименујте је у исправно име за „%s“, а затим је отворите на уобичајен начин.  Са друге стране, користите мени „Отвори помоћу“ да изаберете одређени програм за ову датотеку."
 
 #: src/file-manager/fm-directory-view.c:4289
 #, c-format
