--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-24 14:56+0100\n"
-"PO-Revision-Date: 2004-02-23 15:19+0100\n"
+"POT-Creation-Date: 2004-02-25 17:47+0100\n"
+"PO-Revision-Date: 2004-02-25 17:51+0100\n"
 "Last-Translator: Danilo Šegan <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -1114,8 +1114,8 @@ msgid ""
 "If set to \"search_by_text_and_properties\", then Nautilus will search for "
 "files by file name and file properties."
 msgstr ""
-"Kriterijum za pretragu datoteka u okviru postrance. Ukoliko je postavljeno "
-"na „search_by_text“, onda će Nautilus tražiti datoteke samo prema imenu. "
+"Kriterijum za pretragu datoteka u okviru postrance. Ukoliko je postavljeno na "
+"„search_by_text“, onda će Nautilus tražiti datoteke samo prema imenu. "
 "Ukoliko je postavljeno na „search_by_text_and_properties“, onda će Nautilus "
 "tražiti datotek po imenu i po osobinama datoteke."
 
@@ -1297,8 +1297,8 @@ msgid ""
 "If set to true, then Nautilus will ask for confirmation when you attempt to "
 "put files in the trash."
 msgstr ""
-"Ukoliko je postavljeno, Nautilus će tražiti odobrenje pri smeštanju datoteka "
-"u smeće."
+"Ukoliko je postavljeno, Nautilus će tražiti odobrenje pri smeštanju datoteka u "
+"smeće."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:42
 msgid ""
@@ -1336,8 +1336,8 @@ msgid ""
 "If set to true, then Nautilus will use the user's home folder as the "
 "desktop. If it is false, then it will use ~/Desktop as the desktop."
 msgstr ""
-"Ukoliko je postavljeno, Nautilus će koristiti lični direktorijum korisnika "
-"za radnu površinu. Ukoliko nije postavljeno, onda će koristiti ~/Desktop za "
+"Ukoliko je postavljeno, Nautilus će koristiti lični direktorijum korisnika za "
+"radnu površinu. Ukoliko nije postavljeno, onda će koristiti ~/Desktop za "
 "radnu površinu."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:47
@@ -1347,8 +1347,8 @@ msgid ""
 "behavior."
 msgstr ""
 "Ukoliko je postavljeno, onda su svi prozori Nautilusa razgledački prozori. "
-"Ovako se Nautilus ponašao pre izdanja 2.6, a neki ljudi više vole ovakav "
-"način rada."
+"Ovako se Nautilus ponašao pre izdanja 2.6, a neki ljudi više vole ovakav način "
+"rada."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:48
 msgid ""
@@ -1433,8 +1433,7 @@ msgstr ""
 msgid ""
 "If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
-"Ukoliko je postavljeno, oznake će biti smeštene pored ikona umesto ispod "
-"njih."
+"Ukoliko je postavljeno, oznake će biti smeštene pored ikona umesto ispod njih."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
 msgid "If true, new windows will use manual layout by default."
@@ -1447,9 +1446,9 @@ msgid ""
 "setting is to avoid thumbnailing large images that may take a long time to "
 "load or use lots of memory."
 msgstr ""
-"Za slike koje prelaze ovu veličinu (u bajtovima) neće biti prikazana "
-"umanjena slika. Svrha ovoga je da se izbegne umanjivanje velikih slika što "
-"može oduzeti mnogo vremena ili memorije."
+"Za slike koje prelaze ovu veličinu (u bajtovima) neće biti prikazana umanjena "
+"slika. Svrha ovoga je da se izbegne umanjivanje velikih slika što može oduzeti "
+"mnogo vremena ili memorije."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:60
 msgid "List of possible captions on icons"
@@ -1531,10 +1530,10 @@ msgid ""
 "local filesystems. If set to \"never\" then it never previews sound."
 msgstr ""
 "Gubitak brzine radi pregleda zvučnih datoteka pri prelasku miša preko ikona "
-"datoteka. Ukoliko je postavljeno na „always“ uvek se pušta zvuk, čak i ako "
-"je datoteka na udaljenom računaru. Ukoliko je postavljeno na „local_only“, "
-"pušta se zvuk samo za lokalne datoteke. Ukoliko je postavljeno na „never“, "
-"nikad se ne pušta zvuk."
+"datoteka. Ukoliko je postavljeno na „always“ uvek se pušta zvuk, čak i ako je "
+"datoteka na udaljenom računaru. Ukoliko je postavljeno na „local_only“, pušta "
+"se zvuk samo za lokalne datoteke. Ukoliko je postavljeno na „never“, nikad se "
+"ne pušta zvuk."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:77
 msgid ""
@@ -1558,11 +1557,11 @@ msgid ""
 "set to \"never\" then never bother to thumbnail images, just use a generic "
 "icon."
 msgstr ""
-"Gubitak brzine radi pregleda umanjenih slika za slike. Ukoliko je "
-"postavljeno na „always“ uvek se prikazuje umanjena slika, čak i ako je "
-"datoteka na udaljenom računaru. Ukoliko je postavljeno na „local_only“, "
-"prikazuje se umanjena slika samo za lokalne datoteke. Ukoliko je postavljeno "
-"na „never“ koristi se opšta ikona."
+"Gubitak brzine radi pregleda umanjenih slika za slike. Ukoliko je postavljeno "
+"na „always“ uvek se prikazuje umanjena slika, čak i ako je datoteka na "
+"udaljenom računaru. Ukoliko je postavljeno na „local_only“, prikazuje se "
+"umanjena slika samo za lokalne datoteke. Ukoliko je postavljeno na „never“ "
+"koristi se opšta ikona."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:79
 msgid ""
@@ -1649,10 +1648,10 @@ msgid ""
 "\"ask\" to ask what to do via a dialog, and \"display\" to display them as "
 "text files."
 msgstr ""
-"Šta treba da uradi sa izvršnim tekstualnim datotekama pri njihovom "
-"aktiviranju (jednostruki ili dvostruki klik). Moguće vrednosti su „launch“ "
-"za pokretanje istih kao programa, „ask“ za postavljanje pitanja pomoću "
-"prozorčeta, i „display“ za prikazivanje kao tekstualnih datoteka."
+"Šta treba da uradi sa izvršnim tekstualnim datotekama pri njihovom aktiviranju "
+"(jednostruki ili dvostruki klik). Moguće vrednosti su „launch“ za pokretanje "
+"istih kao programa, „ask“ za postavljanje pitanja pomoću prozorčeta, i "
+"„display“ za prikazivanje kao tekstualnih datoteka."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:93
 msgid ""
@@ -1711,26 +1710,23 @@ msgstr "Širina površi postrance"
 
 #: libnautilus-private/nautilus-column-chooser.c:365
 msgid "Move _Up"
-msgstr ""
+msgstr "Premesti _dole"
 
 #: libnautilus-private/nautilus-column-chooser.c:374
 msgid "Move _Down"
-msgstr ""
+msgstr "Premesti _gore"
 
 #: libnautilus-private/nautilus-column-chooser.c:383
-#, fuzzy
 msgid "_Show"
-msgstr "Prikaži %s"
+msgstr "Pri_kaži"
 
 #: libnautilus-private/nautilus-column-chooser.c:393
-#, fuzzy
 msgid "_Hide"
-msgstr "_Pronađi"
+msgstr "Sakri_j"
 
 #: libnautilus-private/nautilus-column-chooser.c:406
-#, fuzzy
 msgid "_Use Default"
-msgstr "Koristi podrazu_mevanu pozadinu"
+msgstr "Podra_zumevano"
 
 #: libnautilus-private/nautilus-column-utilities.c:44
 msgid "The name and icon of the file."
@@ -1954,8 +1950,8 @@ msgid ""
 "\"%s\" cannot be deleted because you do not have permissions to modify its "
 "parent folder."
 msgstr ""
-"Ne može se obrisati „%s“ zato što nemate ovlašćenja da menjate direktorijum "
-"u kom se nalazi."
+"Ne može se obrisati „%s“ zato što nemate ovlašćenja da menjate direktorijum u "
+"kom se nalazi."
 
 #: libnautilus-private/nautilus-file-operations.c:569
 #, c-format
@@ -1968,8 +1964,8 @@ msgid ""
 "\"%s\" cannot be moved because you do not have permissions to change it or "
 "its parent folder."
 msgstr ""
-"Ne može se premestiti datoteka „%s“ zato što nemate ovlašćenja da menjate "
-"nju ili direktorijum u kom se nalazi."
+"Ne može se premestiti datoteka „%s“ zato što nemate ovlašćenja da menjate nju "
+"ili direktorijum u kom se nalazi."
 
 #: libnautilus-private/nautilus-file-operations.c:604
 msgid "Error while moving. "
@@ -3105,8 +3101,8 @@ msgid ""
 "Do you want to switch to manual layout and leave this item where you dropped "
 "it? This will clobber the stored manual layout."
 msgstr ""
-"Želite li da pređete na ručno raspoređivanje i ostavite ovu stavku tu gde "
-"ste je pustili? Ovo će izmeniti već sačuvan ručni raspored."
+"Želite li da pređete na ručno raspoređivanje i ostavite ovu stavku tu gde ste "
+"je pustili? Ovo će izmeniti već sačuvan ručni raspored."
 
 #: libnautilus-private/nautilus-icon-dnd.c:734
 #: libnautilus-private/nautilus-icon-dnd.c:738
@@ -3120,24 +3116,24 @@ msgid ""
 "Do you want to switch to manual layout and leave these items where you "
 "dropped them? This will clobber the stored manual layout."
 msgstr ""
-"Želite li da pređete na ručno raspoređivanje i ostavite ove stavke tu gde "
-"ste ih pustili? Ovo će izmeniti već sačuvan ručni raspored."
+"Želite li da pređete na ručno raspoređivanje i ostavite ove stavke tu gde ste "
+"ih pustili? Ovo će izmeniti već sačuvan ručni raspored."
 
 #: libnautilus-private/nautilus-icon-dnd.c:742
 msgid ""
 "Do you want to switch to manual layout and leave this item where you dropped "
 "it?"
 msgstr ""
-"Želite li da pređete na ručno raspoređivanje i ostavite ovu stavku tu gde "
-"ste je pustili?"
+"Želite li da pređete na ručno raspoređivanje i ostavite ovu stavku tu gde ste "
+"je pustili?"
 
 #: libnautilus-private/nautilus-icon-dnd.c:745
 msgid ""
 "Do you want to switch to manual layout and leave these items where you "
 "dropped them?"
 msgstr ""
-"Želite li da pređete na ručno raspoređivanje i ostavite ove stavke tu gde "
-"ste ih pustili?"
+"Želite li da pređete na ručno raspoređivanje i ostavite ove stavke tu gde ste "
+"ih pustili?"
 
 #: libnautilus-private/nautilus-icon-dnd.c:751
 msgid "Switch to Manual Layout?"
@@ -4212,9 +4208,9 @@ msgid "An _Application..."
 msgstr "_Program..."
 
 #: src/file-manager/fm-directory-view.c:3915
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot open %s"
-msgstr "Ne može da umnoži smeće"
+msgstr "Ne mogu da otvorim %s"
 
 #: src/file-manager/fm-directory-view.c:3918
 #, c-format
@@ -4228,6 +4224,9 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
+"Ime datoteke „%s“ označava da je ova datoteka vrste „%s“. Sadržaj datoteke označava da je datoteka vrste „%s“. Ukoliko otvorite ovu datoteku, vaš sistem može biti izložen bezbednosnom riziku.\n"
+"\n"
+"Ne otvarajte ovu datoteku osim ako je niste sami napravili, ili je primili iz pouzdanog izvora. Da otvorite datoteku, preimenujte je u ispravno ime za „%s“, a zatim je otvorite na uobičajen način.  Sa druge strane, koristite meni „Otvori pomoću“ da izaberete određeni program za ovu datoteku."
 
 #: src/file-manager/fm-directory-view.c:4289
 #, c-format
@@ -4284,8 +4283,8 @@ msgstr ""
 "datoteka kao paramtere. Kada se izvrše iz udaljenih direktorijuma (npr. veb "
 "ili FTP), skripte neće dobiti nikakve parametre.\n"
 "\n"
-"U svim slučajevima, sledeće promenljive okruženja će postaviti Nautilus, "
-"koje skripte mogu koristiti:\n"
+"U svim slučajevima, sledeće promenljive okruženja će postaviti Nautilus, koje "
+"skripte mogu koristiti:\n"
 "\n"
 "NAUTILUS_SCRIPT_SELECTED_FILE_PATHS: putanje izabranih datoteka u zasebnim "
 "redovima (samo ako je lokalno)\n"
@@ -5000,8 +4999,8 @@ msgid ""
 "Search results may not include items modified after %s, when your drive was "
 "last indexed."
 msgstr ""
-"Rezultati pretrage možda neće sadržati stavke izmenjene nakon %s, kada je "
-"vaš disk poslednji put popisan."
+"Rezultati pretrage možda neće sadržati stavke izmenjene nakon %s, kada je vaš "
+"disk poslednji put popisan."
 
 #: src/file-manager/fm-search-list-view.c:144
 msgid "Search Results"
@@ -5426,13 +5425,11 @@ msgstr "Otvori izabranu stavku u ovom prozoru"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:31
 msgid "Prepare the selected files to be copied with a Paste Files command"
-msgstr ""
-"Pripremi izabrane datoteke za umnožavanje pomoću naredbe Ubaci datoteke"
+msgstr "Pripremi izabrane datoteke za umnožavanje pomoću naredbe Ubaci datoteke"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:32
 msgid "Prepare the selected files to be moved with a Paste Files command"
-msgstr ""
-"Pripremi izabrane datoteke za premeštanje pomoću naredbe Ubaci datoteke"
+msgstr "Pripremi izabrane datoteke za premeštanje pomoću naredbe Ubaci datoteke"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:33
 msgid "Prot_ect"
@@ -5654,9 +5651,8 @@ msgid ""
 "Fast searching is not enabled on your computer, so you do not have an index "
 "right now."
 msgstr ""
-"Kada je brza pretraga omogućena, obrazuje se popis za ubrzanje pretraga. "
-"Brzo pretraživanje nije omogućeno na vašem računaru, pa trenutno nemate "
-"popis."
+"Kada je brza pretraga omogućena, obrazuje se popis za ubrzanje pretraga. Brzo "
+"pretraživanje nije omogućeno na vašem računaru, pa trenutno nemate popis."
 
 #: src/file-manager/nautilus-indexing-info.c:262
 msgid "No Index of Files"
@@ -7974,8 +7970,8 @@ msgstr "Pregledajte vaše mrežne servere u Nautilusovom upravniku datoteka"
 #~ msgstr ""
 #~ "Podrazumevana akcija ne može da otvori „%s“ zato što ne može da pristupi "
 #~ "datotekama na lokacijama „%s“. Nijedna druga akcija nije namenjena "
-#~ "pregledanju ove datoteke. Ukoliko prekopirate ovu datoteku na vaš "
-#~ "računar, možda ćete moći da je otvorite."
+#~ "pregledanju ove datoteke. Ukoliko prekopirate ovu datoteku na vaš računar, "
+#~ "možda ćete moći da je otvorite."
 
 # bug: plural-forms
 #~ msgid ""
