Updated Swedish translation.
2004-02-26  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

--- a/po/sv.po
+++ b/po/sv.po
@@ -10,14 +10,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-24 14:56+0100\n"
-"PO-Revision-Date: 2004-02-24 09:46+0100\n"
+"POT-Creation-Date: 2004-02-26 01:00+0100\n"
+"PO-Revision-Date: 2004-02-26 01:01+0100\n"
 "Last-Translator: Christian Rose <menthos@menthos.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: components/adapter/Nautilus_ComponentAdapterFactory_std.server.in.in.h:1
@@ -4202,6 +4202,14 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
+"Filnamnet \"%s\" indikerar att denna fil är av typen \"%s\". Innehållet i "
+"filen indikerar att filen är av typen \"%s\". Om du öppnar denna fil kan den "
+"innebära en säkerhetsrisk för ditt system.\n"
+"\n"
+"Öppna inte filen såvida du inte skapat filen själv eller fått filen från en "
+"pålitlig källa. För att öppna filen byter du namn på filen till den rätta "
+"filändelsen för \"%s\" och öppnar sedan filen normalt. Alternativt kan du "
+"använda menyn Öppna med för att välja ett specifikt program för filen."
 
 #: src/file-manager/fm-directory-view.c:4289
 #, c-format
