Updated Welsh translation.

--- a/po/cy.po
+++ b/po/cy.po
@@ -30,7 +30,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-24 14:56+0100\n"
+"POT-Creation-Date: 2004-02-26 06:14+0000\n"
 "PO-Revision-Date: 2004-02-24 06:06+0000\n"
 "Last-Translator: Dafydd Harries <daf@muse.19inch.net>\n"
 "Language-Team: Cymraeg <gnome-cy@pengwyn.linux.org.uk>\n"
@@ -4242,7 +4242,7 @@ msgstr "_Rhaglen..."
 #: src/file-manager/fm-directory-view.c:3915
 #, fuzzy, c-format
 msgid "Cannot open %s"
-msgstr "Ni Ellit Copïo Sbwriel"
+msgstr "Ni ellir agor %s"
 
 #: src/file-manager/fm-directory-view.c:3918
 #, c-format
@@ -4256,6 +4256,15 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
+"Mae'r enw ffeil \"%s\" yn awgrymu fod y ffeil yma o'r math \"%s\". Mae "
+"cynnwys y ffeil yn awgrymu fod y ffeil o'r math \"%s\". Os ydych chi'n agor "
+"y ffeil hwn, gall fod yn beryglus i ddiogelwch eich system.\n"
+"\n"
+"Peidiwch ac agor y ffeil os nad ydych chi wedi creu'r ffeil eich hunan, neu "
+"wedi derbyn y ffeil o ffynhonell rydych chi'n ymddiried ynddi. Er mwyn "
+"agor y ffeil, ailenwch y ffeil i'r estyniad cywir ar gyfer \"%s\", ac yna "
+"agorwch y ffeil fel arfer. Neu fe allwch ddefnyddio'r dewislen Agor Gyda er "
+"mwyn dewis gweithred penodol ar gyfer y ffeil."
 
 #: src/file-manager/fm-directory-view.c:4289
 #, c-format
@@ -5527,7 +5536,7 @@ msgstr "Gweld neu addasu y hoffterau ar gyfer pob un o'r eitemau dewisiedig"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:51
 msgid "_Empty File"
-msgstr "_Gwagu Ffeil"
+msgstr "Ffeil _Gwag"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:53
 msgid "_Format"
