--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-26  Dafydd Harries  <daf@muse.19inch.net>
+
+	* cy.po: Updated Welsh translation.
+
 2004-02-26  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
