--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-27  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation by
+	Luca Ferretti <elle.uca@infinito.it>.
+
 2004-02-26  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* hi.po: Updated Hindi translation.
