--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-27  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Allan Sims.
+
 2004-02-27  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
