--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-27  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+
 2004-02-27  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Allan Sims.
