--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-27  Christian Neumair  <chris@gnome-de.org>
+
+	* POTFILES.skip: Added a bunch of missing files.
+	* de.po: Updated German translation.
+
 2004-02-27  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
