Set is-extension-page on the page widget, not the extension object.
2004-02-27  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-properties-window.c (append_extension_pages):
	Set is-extension-page on the page widget, not the extension object.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-27  Dave Camp  <dave@ximian.com>
+
+	* src/file-manager/fm-properties-window.c (append_extension_pages): 
+	Set is-extension-page on the page widget, not the extension object.
+
 === nautilus 2.5.8 ===
 
 2004-02-24  Alexander Larsson  <alexl@redhat.com>
