Updated Thai translation.
2004-02-28  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-21 20:44+0100\n"
-"PO-Revision-Date: 2004-02-24 22:35-0600\n"
+"PO-Revision-Date: 2004-02-28 03:29-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@users.sf.net>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -2518,11 +2518,11 @@ msgstr "เมื่อวาน"
 #.
 #: libnautilus-private/nautilus-file.c:2955
 msgid "Wednesday, September 00 0000 at 00:00:00 PM"
-msgstr "วันพฤหัสบดี ที่ 00 พฤศจิกายน พ.ศ. 0000 ตอน 00:00:00 น."
+msgstr "พฤหัสบดีที่ 00 พฤศจิกายน 2547 ตอน 01:23:45 น."
 
 #: libnautilus-private/nautilus-file.c:2956
 msgid "%A, %B %-d %Y at %-I:%M:%S %p"
-msgstr "วัน%Aที่ %-d %B %EY ตอน %-H:%M:%S น."
+msgstr "%Aที่ %-d %B %Ey ตอน %H:%M:%S น."
 
 #: libnautilus-private/nautilus-file.c:2958
 msgid "Mon, Oct 00 0000 at 00:00:00 PM"
@@ -2530,7 +2530,7 @@ msgstr "อา. 13 มิ.ย. 2542, 22:48:32"
 
 #: libnautilus-private/nautilus-file.c:2959
 msgid "%a, %b %-d %Y at %-I:%M:%S %p"
-msgstr "%a %-d %b %Ey, %-H:%M:%S"
+msgstr "%a %-d %b %Ey, %H:%M:%S"
 
 #: libnautilus-private/nautilus-file.c:2961
 msgid "Mon, Oct 00 0000 at 00:00 PM"
@@ -2538,7 +2538,7 @@ msgstr "อา. 13 มิ.ย. 2542, 22:48"
 
 #: libnautilus-private/nautilus-file.c:2962
 msgid "%a, %b %-d %Y at %-I:%M %p"
-msgstr "%a %-d %b %Ey, %-H:%M"
+msgstr "%a %-d %b %Ey, %H:%M"
 
 #: libnautilus-private/nautilus-file.c:2964
 msgid "Oct 00 0000 at 00:00 PM"
@@ -2546,7 +2546,7 @@ msgstr "13 มิ.ย. 2542, 22:48"
 
 #: libnautilus-private/nautilus-file.c:2965
 msgid "%b %-d %Y at %-I:%M %p"
-msgstr "%-d %b %Ey, %-H:%M"
+msgstr "%-d %b %Ey, %H:%M"
 
 #: libnautilus-private/nautilus-file.c:2967
 msgid "Oct 00 0000, 00:00 PM"
@@ -2554,7 +2554,7 @@ msgstr "13 มิ.ย. 2542, 22:48"
 
 #: libnautilus-private/nautilus-file.c:2968
 msgid "%b %-d %Y, %-I:%M %p"
-msgstr "%-d %b %Ey, %-H:%M"
+msgstr "%-d %b %Ey, %H:%M"
 
 #: libnautilus-private/nautilus-file.c:2970
 msgid "00/00/00, 00:00 PM"
@@ -2562,7 +2562,7 @@ msgstr "00/00/0000, 00:00"
 
 #: libnautilus-private/nautilus-file.c:2971
 msgid "%m/%-d/%y, %-I:%M %p"
-msgstr "%-d/%m/%Ey, %-H:%M"
+msgstr "%-d/%m/%Ey, %H:%M"
 
 #: libnautilus-private/nautilus-file.c:2973
 msgid "00/00/00"
