Updated Thai translation.
2004-02-28  Paisa Seeluangsawat  <paisa@users.sf.net>

	* th.po: Updated Thai translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-28  Paisa Seeluangsawat  <paisa@users.sf.net>
+
+	* th.po: Updated Thai translation.
+
 2004-02-27  Christian Neumair  <chris@gnome-de.org>
 
 	* POTFILES.skip: Added a bunch of missing files.
