--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-28  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2004-02-28  Paisa Seeluangsawat  <paisa@users.sf.net>
 
 	* th.po: Updated Thai translation.
