--- a/po/fr.po
+++ b/po/fr.po
@@ -9,10 +9,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus 2.5.7\n"
+"Project-Id-Version: nautilus 2.5.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-24 14:56+0100\n"
-"PO-Revision-Date: 2004-02-13 12:11+0100\n"
+"POT-Creation-Date: 2004-02-28 18:14+0100\n"
+"PO-Revision-Date: 2004-02-28 17:58+0100\n"
 "Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -972,7 +972,7 @@ msgstr "Ce thème utilise des icônes photoréalistes pour les dossiers."
 #: libnautilus-extension/nautilus-property-page.c:176
 #: libnautilus-private/nautilus-column-utilities.c:43
 #: libnautilus-private/nautilus-program-chooser.c:1241
-#: src/file-manager/fm-list-view.c:1052
+#: src/file-manager/fm-list-view.c:1054
 #: src/file-manager/fm-search-list-view.c:501
 msgid "Name"
 msgstr "Nom"
@@ -1202,6 +1202,8 @@ msgstr ""
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:28
 msgid "Enables the classic Nautilus behavior, where all windows are browsers"
 msgstr ""
+"Active le comportement classique de Nautilus, où toutes les fenêtres sont "
+"des navigateurs"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:29
 msgid ""
@@ -1343,6 +1345,10 @@ msgid ""
 "how Nautilus used to behave before version 2.6, and some people prefer this "
 "behavior."
 msgstr ""
+"Si défini à vrai, alors toutes les fenêtres de Nautilus seront des fenêtres "
+"de navigation. C'est la manière à utiliser pour que Nautilus se comporte de "
+"la même manière qu'avant la version 2.6, et quelques personnes préfèrent ce "
+"comportement."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:48
 msgid ""
@@ -1720,26 +1726,23 @@ msgstr "Largeur du panneau latéral"
 
 #: libnautilus-private/nautilus-column-chooser.c:365
 msgid "Move _Up"
-msgstr ""
+msgstr "Déplacer vers le _haut"
 
 #: libnautilus-private/nautilus-column-chooser.c:374
 msgid "Move _Down"
-msgstr ""
+msgstr "Déplacer vers le _bas"
 
 #: libnautilus-private/nautilus-column-chooser.c:383
-#, fuzzy
 msgid "_Show"
-msgstr "Afficher %s"
+msgstr "_Afficher"
 
 #: libnautilus-private/nautilus-column-chooser.c:393
-#, fuzzy
 msgid "_Hide"
-msgstr "_Aide"
+msgstr "_Cacher"
 
 #: libnautilus-private/nautilus-column-chooser.c:406
-#, fuzzy
 msgid "_Use Default"
-msgstr "Utiliser l'arrière-plan par _défaut"
+msgstr "_Utiliser les valeurs par défaut"
 
 #: libnautilus-private/nautilus-column-utilities.c:44
 msgid "The name and icon of the file."
@@ -2194,6 +2197,10 @@ msgid "Replace _All"
 msgstr "_Tout remplacer"
 
 #. appended to new link file
+#. Note to localizers: convert file type string for file
+#. * (e.g. "folder", "plain text") to file type for symbolic link
+#. * to that kind of file (e.g. "link to folder").
+#.
 #: libnautilus-private/nautilus-file-operations.c:1148
 #: libnautilus-private/nautilus-file.c:4714
 #, c-format
@@ -2248,6 +2255,9 @@ msgid " (another copy)"
 msgstr " (une autre copie)"
 
 #. localizers: tag used to detect the x11th copy of a file
+#. localizers: tag used to detect the x12th copy of a file
+#. localizers: tag used to detect the x13th copy of a file
+#. localizers: tag used to detect the xxth copy of a file
 #: libnautilus-private/nautilus-file-operations.c:1206
 #: libnautilus-private/nautilus-file-operations.c:1208
 #: libnautilus-private/nautilus-file-operations.c:1210
@@ -2283,6 +2293,9 @@ msgid "%s (another copy)%s"
 msgstr "%s (autre copie)%s"
 
 #. localizers: appended to x11th file copy
+#. localizers: appended to x12th file copy
+#. localizers: appended to x13th file copy
+#. localizers: appended to xxth file copy
 #: libnautilus-private/nautilus-file-operations.c:1239
 #: libnautilus-private/nautilus-file-operations.c:1241
 #: libnautilus-private/nautilus-file-operations.c:1243
@@ -2936,7 +2949,7 @@ msgid "Icon View"
 msgstr "Vue en icônes"
 
 #: libnautilus-private/nautilus-global-preferences.c:179
-#: src/file-manager/fm-list-view.c:1105
+#: src/file-manager/fm-list-view.c:1107
 #: src/nautilus-file-management-properties.glade.h:54
 msgid "List View"
 msgstr "Vue en liste"
@@ -3371,10 +3384,6 @@ msgstr "Il n'y a pas d'action associée avec « %s »."
 msgid "No Action Associated"
 msgstr "Aucune action associée"
 
-#. Note: This might be misleading in the components case, since the
-#. * user can't add components to the complete list even from the capplet.
-#. * (They can add applications though.)
-#.
 #: libnautilus-private/nautilus-program-chooser.c:1605
 msgid ""
 "You can configure GNOME to associate applications with file types. Do you "
@@ -4150,10 +4159,6 @@ msgstr "%s, espace libre : %s"
 msgid "%s%s, %s"
 msgstr "%s%s, %s"
 
-#. Note that the number of items actually displayed varies somewhat due
-#. * to the way files are collected in batches. So you can't assume that
-#. * no more than the constant limit are displayed.
-#.
 #: src/file-manager/fm-directory-view.c:1968
 #, c-format
 msgid "The folder \"%s\" contains more files than Nautilus can handle."
@@ -4240,9 +4245,9 @@ msgid "An _Application..."
 msgstr "Une _application..."
 
 #: src/file-manager/fm-directory-view.c:3915
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot open %s"
-msgstr "Impossible de copier la corbeille"
+msgstr "Impossible d'ouvrir %s"
 
 #: src/file-manager/fm-directory-view.c:3918
 #, c-format
@@ -4256,6 +4261,16 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
+"Le nom du fichier « %s » indique que ce fichier est de type « %s ». Le "
+"contenu de ce fichier indique que le fichier est de type « %s ». Si vous "
+"ouvrez ce fichier, le fichier peut présenter un risque de sécurité pour "
+"votre système.\n"
+"\n"
+"N'ouvrez pas ce fichier à moins que vous ne l'ayez créé vous-même, ou reçu "
+"ce fichier depuis une source sûre. Pour ouvrir ce fichier, renommez le "
+"fichier avec une extension correcte pour « %s », et ouvrez le fichier "
+"normalement. Sinon, utilisez le menu Ouvrir avec pour choisir une "
+"application particulière pour ce fichier."
 
 #: src/file-manager/fm-directory-view.c:4289
 #, c-format
@@ -4752,12 +4767,12 @@ msgstr "Erreur de Glisser Déposer"
 msgid "An invalid drag type was used."
 msgstr "Un type de glisser non valide à été utilisé."
 
-#: src/file-manager/fm-list-view.c:1512
+#: src/file-manager/fm-list-view.c:1514
 #, c-format
 msgid "%s Visible Columns"
 msgstr "%s colonnes visibles"
 
-#: src/file-manager/fm-list-view.c:1531
+#: src/file-manager/fm-list-view.c:1533
 msgid "Choose the order of information to appear in this folder."
 msgstr "Choisissez l'ordre des informations apparaîssant dans ce dossier."
 
@@ -5102,8 +5117,6 @@ msgstr ""
 msgid "Error During Search"
 msgstr "Erreur lors de la recherche"
 
-#. FIXME: This dialog does not get shown because a slow search
-#. will be performed and will not return an error.
 #: src/file-manager/fm-search-list-view.c:211
 msgid ""
 "Find cannot open your file system index.  Your index may be missing or "
@@ -5814,16 +5827,6 @@ msgstr ""
 msgid "Migrated Old Desktop"
 msgstr "Migration de l'ancien bureau"
 
-#. Can't register myself due to trouble locating the
-#. * Nautilus_Shell.server file. This has happened when you
-#. * launch Nautilus with an LD_LIBRARY_PATH that
-#. * doesn't include the directory containing the oaf
-#. * library. It could also happen if the
-#. * Nautilus_Shell.server file was not present for some
-#. * reason. Sometimes killing oafd and gconfd fixes
-#. * this problem but we don't exactly understand why,
-#. * since neither of the above causes explain it.
-#.
 #: src/nautilus-application.c:534
 msgid ""
 "Nautilus can't be used now. Running the command \"bonobo-slay\" from the "
@@ -5834,7 +5837,6 @@ msgstr ""
 "slay » depuis la console peut régler le problème. Sinon, vous pouvez essayer "
 "de redémarrer l'ordinateur ou d'installer Nautilus de nouveau."
 
-#. FIXME bugzilla.gnome.org 42536: The guesses and stuff here are lame.
 #: src/nautilus-application.c:540
 msgid ""
 "Nautilus can't be used now. Running the command \"bonobo-slay\" from the "
@@ -5881,6 +5883,7 @@ msgstr ""
 #. * current OAF. I guess I read the code wrong. Need to figure out when and make a
 #. * good message.
 #.
+#. FIXME bugzilla.gnome.org 42538: When can this happen?
 #: src/nautilus-application.c:570 src/nautilus-application.c:588
 #: src/nautilus-application.c:595
 msgid "Nautilus can't be used now, due to an unexpected error."
@@ -6375,23 +6378,28 @@ msgid "Nautilus"
 msgstr "Nautilus"
 
 #: src/nautilus-main.c:259
+#, c-format
 msgid "nautilus: --check cannot be used with URIs.\n"
 msgstr "nautilus : l'option --check ne peut être utilisée avec les URIs.\n"
 
 #: src/nautilus-main.c:263
+#, c-format
 msgid "nautilus: --check cannot be used with other options.\n"
 msgstr ""
 "nautilus : l'option --check ne peut être utilisée avec d'autres options.\n"
 
 #: src/nautilus-main.c:267
+#, c-format
 msgid "nautilus: --quit cannot be used with URIs.\n"
 msgstr "nautilus : l'option --quit ne peut être utilisée avec les URIs.\n"
 
 #: src/nautilus-main.c:271
+#, c-format
 msgid "nautilus: --restart cannot be used with URIs.\n"
 msgstr "nautilus : l'option --restart ne peut être utilisée avec les URIs.\n"
 
 #: src/nautilus-main.c:275
+#, c-format
 msgid "nautilus: --geometry cannot be used with more than one URI.\n"
 msgstr ""
 "nautilus : l'option --geometry ne peut être utilisée avec plus d'une URI.\n"
@@ -7457,137 +7465,3 @@ msgstr "Serveurs réseaux"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Affiche vos serveurs réseaux dans le gestionnaire de fichiers Nautilus"
-
-#~ msgid "Can't find an hbox, using a normal file selection"
-#~ msgstr ""
-#~ "Impossible de trouver un hbox, utilisation d'un sélecteur de fichiers "
-#~ "normal"
-
-#~ msgid "AFFS Volume"
-#~ msgstr "Volume AFFS"
-
-#~ msgid "AFS Network Volume"
-#~ msgstr "Volume réseau AFS"
-
-#~ msgid "Auto-detected Volume"
-#~ msgstr "Volume auto-détecté"
-
-#~ msgid "CD Digital Audio"
-#~ msgstr "CD audio numérique"
-
-#~ msgid "CD-ROM Drive"
-#~ msgstr "Lecteur CD-ROM"
-
-#~ msgid "CDROM Volume"
-#~ msgstr "Volume CD-ROM"
-
-#~ msgid "DVD Volume"
-#~ msgstr "Volume DVD"
-
-#~ msgid "Enhanced DOS Volume"
-#~ msgstr "Volume MSDOS amélioré"
-
-#~ msgid "Ext2 Linux Volume"
-#~ msgstr "Volume Linux Ext2"
-
-#~ msgid "Ext3 Linux Volume"
-#~ msgstr "Volume Linux Ext3"
-
-#~ msgid "Hardware Device Volume"
-#~ msgstr "Volume périphérique matériel"
-
-#~ msgid "Hsfs CDROM Volume"
-#~ msgstr "Volume CD-ROM Hsfs"
-
-#~ msgid "JFS Volume"
-#~ msgstr "Volume JFS"
-
-#~ msgid "MSDOS Volume"
-#~ msgstr "Volume MSDOS"
-
-#~ msgid "MacOS Volume"
-#~ msgstr "Volume MacOS"
-
-#~ msgid "Minix Volume"
-#~ msgstr "Volume Minix"
-
-#~ msgid "NFS Network Volume"
-#~ msgstr "Volume réseau NFS"
-
-#~ msgid "Pcfs Solaris Volume"
-#~ msgstr "Volume Solaris Pcfs"
-
-#~ msgid "ReiserFS Linux Volume"
-#~ msgstr "Volume Linux ReiserFS"
-
-#~ msgid "Solaris/BSD Volume"
-#~ msgstr "Volume Solaris/BSD"
-
-#~ msgid "SuperMount Volume"
-#~ msgstr "Volume Supermount"
-
-#~ msgid "System Volume"
-#~ msgstr "Volume système"
-
-#~ msgid "Udfs Solaris Volume"
-#~ msgstr "Volume Solaris Udfs"
-
-#~ msgid "Windows NT Volume"
-#~ msgstr "Volume Windows NT"
-
-#~ msgid "Windows Shared Volume"
-#~ msgstr "Volume partagé Windows"
-
-#~ msgid "Windows VFAT Volume"
-#~ msgstr "Volume Windows VFAT"
-
-#~ msgid "XFS Linux Volume"
-#~ msgstr "Volume Linux XFS"
-
-#~ msgid "XIAFS Volume"
-#~ msgstr "Volume XIAFS"
-
-#~ msgid "Xenix Volume"
-#~ msgstr "Volume Xenix"
-
-#~ msgid ""
-#~ "Couldn't execute nautilus\n"
-#~ "Make sure nautilus is in your path and correctly installed"
-#~ msgstr ""
-#~ "Impossible d'exécuter Nautilus\n"
-#~ "Assurez vous que nautilus est dans votre « path » et qu'il est "
-#~ "correctement installé"
-
-#~ msgid ""
-#~ "Couldn't connect to URI %s\n"
-#~ "Please make sure that the address is correct and alternatively, type in "
-#~ "this address in the file manager directly"
-#~ msgstr ""
-#~ "Impossible de se connecter à l'URI %s\n"
-#~ "Veuillez vous assurer que l'adresse est correcte et saisissez la "
-#~ "directement dans le gestionnaire de fichiers"
-
-#~ msgid ""
-#~ "Glade file for the connect to server program is missing.\n"
-#~ "Please check your installation of nautilus"
-#~ msgstr ""
-#~ "Le fichier Glade por le programme de connexion au serveur est manquant.\n"
-#~ "Veuillez vérifier votre nstallation de Nautilus"
-
-#~ msgid "Add a new server to your Network Servers and connect to it"
-#~ msgstr "Ajoute un nouveau serveur à vos Serveurs réseaux et s'y connecte"
-
-#~ msgid "New Server"
-#~ msgstr "Nouveau serveur"
-
-#~ msgid "*"
-#~ msgstr "*"
-
-#~ msgid "_Connect"
-#~ msgstr "_Connecter"
-
-#~ msgid "File name"
-#~ msgstr "Nom du fichier"
-
-#~ msgid "Close this window"
-#~ msgstr "Ferme cette fenêtre"
